state/parser/vylang_parser.go
// Code generated from java-escape by ANTLR 4.11.1. DO NOT EDIT.

package parser // VyLang
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type VyLangParser struct {
	*antlr.BaseParser
}

var vylangParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func vylangParserInit() {
	staticData := &vylangParserStaticData
	staticData.literalNames = []string{
		"", "'.'", "'@'", "'action'", "'on'", "':'", "'{'", "','", "'}'", "'['",
		"']'", "'&'", "'$'", "'bind'", "'='", "'while'", "'if'", "'else'", "'del'",
		"'<-'", "'->'", "'<=>'", "'('", "')'", "'type'", "'in'", "'string'",
		"'integer'", "'float'", "'boolean'", "'raw'", "'function'", "'?'", "'-'",
		"'!'", "'*'", "'/'", "'+'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='",
		"'&&'", "'||'", "'++'", "'--'", "'constant'", "'true'", "'false'", "'null'",
	}
	staticData.symbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "STRING", "IDENTIFIER", "NEWLINE", "WHITESPACE", "INT",
	}
	staticData.ruleNames = []string{
		"prog", "definitions", "definition", "variable", "namedAction", "action",
		"actionParallel", "actionSequence", "actionAsync", "actionReference",
		"actionBind", "actionWhile", "actionCond", "actionIf", "actionIfElse",
		"actionLeaf", "actionAssign", "actionClear", "binding", "namedType",
		"type", "rawType", "typeMap", "typeList", "typeReference", "typeLeaf",
		"typeMapEntry", "namedExpr", "expr", "exprBrackets", "exprAlternative",
		"exprOperator1", "exprOperator2", "exprReference", "exprMap", "exprList",
		"exprMapEntry", "namedLiteral", "literal", "literalTerminal", "literalString",
		"literalInt", "literalBoolean", "literalFloat", "literalNull", "literalReference",
		"literalMap", "literalList", "literalMapEntry",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// VyLangParserInit initializes any static state used to implement VyLangParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewVyLangParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func VyLangParserInit() {
	staticData := &vylangParserStaticData
	staticData.once.Do(vylangParserInit)
}

// NewVyLangParser produces a new parser instance for the optional input antlr.TokenStream.
func NewVyLangParser(input antlr.TokenStream) *VyLangParser {
	VyLangParserInit()
	this := new(VyLangParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &vylangParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "java-escape"

	return this
}

// VyLangParser tokens.
const (
	VyLangParserEOF        = antlr.TokenEOF
	VyLangParserT__0       = 1
	VyLangParserT__1       = 2
	VyLangParserT__2       = 3
	VyLangParserT__3       = 4
	VyLangParserT__4       = 5
	VyLangParserT__5       = 6
	VyLangParserT__6       = 7
	VyLangParserT__7       = 8
	VyLangParserT__8       = 9
	VyLangParserT__9       = 10
	VyLangParserT__10      = 11
	VyLangParserT__11      = 12
	VyLangParserT__12      = 13
	VyLangParserT__13      = 14
	VyLangParserT__14      = 15
	VyLangParserT__15      = 16
	VyLangParserT__16      = 17
	VyLangParserT__17      = 18
	VyLangParserT__18      = 19
	VyLangParserT__19      = 20
	VyLangParserT__20      = 21
	VyLangParserT__21      = 22
	VyLangParserT__22      = 23
	VyLangParserT__23      = 24
	VyLangParserT__24      = 25
	VyLangParserT__25      = 26
	VyLangParserT__26      = 27
	VyLangParserT__27      = 28
	VyLangParserT__28      = 29
	VyLangParserT__29      = 30
	VyLangParserT__30      = 31
	VyLangParserT__31      = 32
	VyLangParserT__32      = 33
	VyLangParserT__33      = 34
	VyLangParserT__34      = 35
	VyLangParserT__35      = 36
	VyLangParserT__36      = 37
	VyLangParserT__37      = 38
	VyLangParserT__38      = 39
	VyLangParserT__39      = 40
	VyLangParserT__40      = 41
	VyLangParserT__41      = 42
	VyLangParserT__42      = 43
	VyLangParserT__43      = 44
	VyLangParserT__44      = 45
	VyLangParserT__45      = 46
	VyLangParserT__46      = 47
	VyLangParserT__47      = 48
	VyLangParserT__48      = 49
	VyLangParserT__49      = 50
	VyLangParserT__50      = 51
	VyLangParserSTRING     = 52
	VyLangParserIDENTIFIER = 53
	VyLangParserNEWLINE    = 54
	VyLangParserWHITESPACE = 55
	VyLangParserINT        = 56
)

// VyLangParser rules.
const (
	VyLangParserRULE_prog             = 0
	VyLangParserRULE_definitions      = 1
	VyLangParserRULE_definition       = 2
	VyLangParserRULE_variable         = 3
	VyLangParserRULE_namedAction      = 4
	VyLangParserRULE_action           = 5
	VyLangParserRULE_actionParallel   = 6
	VyLangParserRULE_actionSequence   = 7
	VyLangParserRULE_actionAsync      = 8
	VyLangParserRULE_actionReference  = 9
	VyLangParserRULE_actionBind       = 10
	VyLangParserRULE_actionWhile      = 11
	VyLangParserRULE_actionCond       = 12
	VyLangParserRULE_actionIf         = 13
	VyLangParserRULE_actionIfElse     = 14
	VyLangParserRULE_actionLeaf       = 15
	VyLangParserRULE_actionAssign     = 16
	VyLangParserRULE_actionClear      = 17
	VyLangParserRULE_binding          = 18
	VyLangParserRULE_namedType        = 19
	VyLangParserRULE_type             = 20
	VyLangParserRULE_rawType          = 21
	VyLangParserRULE_typeMap          = 22
	VyLangParserRULE_typeList         = 23
	VyLangParserRULE_typeReference    = 24
	VyLangParserRULE_typeLeaf         = 25
	VyLangParserRULE_typeMapEntry     = 26
	VyLangParserRULE_namedExpr        = 27
	VyLangParserRULE_expr             = 28
	VyLangParserRULE_exprBrackets     = 29
	VyLangParserRULE_exprAlternative  = 30
	VyLangParserRULE_exprOperator1    = 31
	VyLangParserRULE_exprOperator2    = 32
	VyLangParserRULE_exprReference    = 33
	VyLangParserRULE_exprMap          = 34
	VyLangParserRULE_exprList         = 35
	VyLangParserRULE_exprMapEntry     = 36
	VyLangParserRULE_namedLiteral     = 37
	VyLangParserRULE_literal          = 38
	VyLangParserRULE_literalTerminal  = 39
	VyLangParserRULE_literalString    = 40
	VyLangParserRULE_literalInt       = 41
	VyLangParserRULE_literalBoolean   = 42
	VyLangParserRULE_literalFloat     = 43
	VyLangParserRULE_literalNull      = 44
	VyLangParserRULE_literalReference = 45
	VyLangParserRULE_literalMap       = 46
	VyLangParserRULE_literalList      = 47
	VyLangParserRULE_literalMapEntry  = 48
)

// IProgContext is an interface to support dynamic dispatch.
type IProgContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgContext differentiates from other interfaces.
	IsProgContext()
}

type ProgContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgContext() *ProgContext {
	var p = new(ProgContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = VyLangParserRULE_prog
	return p
}

func (*ProgContext) IsProgContext() {}

func NewProgContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgContext {
	var p = new(ProgContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = VyLangParserRULE_prog

	return p
}

func (s *ProgContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgContext) Definitions() IDefinitionsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDefinitionsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDefinitionsContext)
}

func (s *ProgContext) EOF() antlr.TerminalNode {
	return s.GetToken(VyLangParserEOF, 0)
}

func (s *ProgContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.EnterProg(s)
	}
}

func (s *ProgContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.ExitProg(s)
	}
}

func (p *VyLangParser) Prog() (localctx IProgContext) {
	this := p
	_ = this

	localctx = NewProgContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, VyLangParserRULE_prog)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(98)
		p.Definitions()
	}
	{
		p.SetState(99)
		p.Match(VyLangParserEOF)
	}

	return localctx
}

// IDefinitionsContext is an interface to support dynamic dispatch.
type IDefinitionsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDefinitionsContext differentiates from other interfaces.
	IsDefinitionsContext()
}

type DefinitionsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDefinitionsContext() *DefinitionsContext {
	var p = new(DefinitionsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = VyLangParserRULE_definitions
	return p
}

func (*DefinitionsContext) IsDefinitionsContext() {}

func NewDefinitionsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DefinitionsContext {
	var p = new(DefinitionsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = VyLangParserRULE_definitions

	return p
}

func (s *DefinitionsContext) GetParser() antlr.Parser { return s.parser }

func (s *DefinitionsContext) AllDefinition() []IDefinitionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDefinitionContext); ok {
			len++
		}
	}

	tst := make([]IDefinitionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDefinitionContext); ok {
			tst[i] = t.(IDefinitionContext)
			i++
		}
	}

	return tst
}

func (s *DefinitionsContext) Definition(i int) IDefinitionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDefinitionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDefinitionContext)
}

func (s *DefinitionsContext) AllNEWLINE() []antlr.TerminalNode {
	return s.GetTokens(VyLangParserNEWLINE)
}

func (s *DefinitionsContext) NEWLINE(i int) antlr.TerminalNode {
	return s.GetToken(VyLangParserNEWLINE, i)
}

func (s *DefinitionsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DefinitionsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DefinitionsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.EnterDefinitions(s)
	}
}

func (s *DefinitionsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.ExitDefinitions(s)
	}
}

func (p *VyLangParser) Definitions() (localctx IDefinitionsContext) {
	this := p
	_ = this

	localctx = NewDefinitionsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, VyLangParserRULE_definitions)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(116)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&18295875650453512) != 0 {
		p.SetState(104)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == VyLangParserNEWLINE {
			{
				p.SetState(101)
				p.Match(VyLangParserNEWLINE)
			}

			p.SetState(106)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(107)
			p.Definition()
		}
		p.SetState(111)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())

		for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
			if _alt == 1 {
				{
					p.SetState(108)
					p.Match(VyLangParserNEWLINE)
				}

			}
			p.SetState(113)
			p.GetErrorHandler().Sync(p)
			_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())
		}

		p.SetState(118)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IDefinitionContext is an interface to support dynamic dispatch.
type IDefinitionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDefinitionContext differentiates from other interfaces.
	IsDefinitionContext()
}

type DefinitionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDefinitionContext() *DefinitionContext {
	var p = new(DefinitionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = VyLangParserRULE_definition
	return p
}

func (*DefinitionContext) IsDefinitionContext() {}

func NewDefinitionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DefinitionContext {
	var p = new(DefinitionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = VyLangParserRULE_definition

	return p
}

func (s *DefinitionContext) GetParser() antlr.Parser { return s.parser }

func (s *DefinitionContext) NamedAction() INamedActionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INamedActionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INamedActionContext)
}

func (s *DefinitionContext) NamedType() INamedTypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INamedTypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INamedTypeContext)
}

func (s *DefinitionContext) NamedLiteral() INamedLiteralContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INamedLiteralContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INamedLiteralContext)
}

func (s *DefinitionContext) NamedExpr() INamedExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INamedExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INamedExprContext)
}

func (s *DefinitionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DefinitionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DefinitionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.EnterDefinition(s)
	}
}

func (s *DefinitionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.ExitDefinition(s)
	}
}

func (p *VyLangParser) Definition() (localctx IDefinitionContext) {
	this := p
	_ = this

	localctx = NewDefinitionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, VyLangParserRULE_definition)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(123)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case VyLangParserT__2:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(119)
			p.NamedAction()
		}

	case VyLangParserT__23:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(120)
			p.NamedType()
		}

	case VyLangParserT__47:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(121)
			p.NamedLiteral()
		}

	case VyLangParserT__30:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(122)
			p.NamedExpr()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IVariableContext is an interface to support dynamic dispatch.
type IVariableContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsVariableContext differentiates from other interfaces.
	IsVariableContext()
}

type VariableContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVariableContext() *VariableContext {
	var p = new(VariableContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = VyLangParserRULE_variable
	return p
}

func (*VariableContext) IsVariableContext() {}

func NewVariableContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VariableContext {
	var p = new(VariableContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = VyLangParserRULE_variable

	return p
}

func (s *VariableContext) GetParser() antlr.Parser { return s.parser }

func (s *VariableContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(VyLangParserIDENTIFIER, 0)
}

func (s *VariableContext) Variable() IVariableContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVariableContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVariableContext)
}

func (s *VariableContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VariableContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *VariableContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.EnterVariable(s)
	}
}

func (s *VariableContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.ExitVariable(s)
	}
}

func (p *VyLangParser) Variable() (localctx IVariableContext) {
	return p.variable(0)
}

func (p *VyLangParser) variable(_p int) (localctx IVariableContext) {
	this := p
	_ = this

	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()
	_parentState := p.GetState()
	localctx = NewVariableContext(p, p.GetParserRuleContext(), _parentState)
	var _prevctx IVariableContext = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 6
	p.EnterRecursionRule(localctx, 6, VyLangParserRULE_variable, _p)

	defer func() {
		p.UnrollRecursionContexts(_parentctx)
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(128)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case VyLangParserIDENTIFIER:
		{
			p.SetState(126)
			p.Match(VyLangParserIDENTIFIER)
		}

	case VyLangParserT__1:
		{
			p.SetState(127)
			p.Match(VyLangParserT__1)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}
	p.GetParserRuleContext().SetStop(p.GetTokenStream().LT(-1))
	p.SetState(135)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 5, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			if p.GetParseListeners() != nil {
				p.TriggerExitRuleEvent()
			}
			_prevctx = localctx
			localctx = NewVariableContext(p, _parentctx, _parentState)
			p.PushNewRecursionContext(localctx, _startState, VyLangParserRULE_variable)
			p.SetState(130)

			if !(p.Precpred(p.GetParserRuleContext(), 2)) {
				panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 2)", ""))
			}
			{
				p.SetState(131)
				p.Match(VyLangParserT__0)
			}
			{
				p.SetState(132)
				p.Match(VyLangParserIDENTIFIER)
			}

		}
		p.SetState(137)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 5, p.GetParserRuleContext())
	}

	return localctx
}

// INamedActionContext is an interface to support dynamic dispatch.
type INamedActionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNamedActionContext differentiates from other interfaces.
	IsNamedActionContext()
}

type NamedActionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNamedActionContext() *NamedActionContext {
	var p = new(NamedActionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = VyLangParserRULE_namedAction
	return p
}

func (*NamedActionContext) IsNamedActionContext() {}

func NewNamedActionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NamedActionContext {
	var p = new(NamedActionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = VyLangParserRULE_namedAction

	return p
}

func (s *NamedActionContext) GetParser() antlr.Parser { return s.parser }

func (s *NamedActionContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(VyLangParserIDENTIFIER, 0)
}

func (s *NamedActionContext) Type_() ITypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeContext)
}

func (s *NamedActionContext) Action_() IActionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IActionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IActionContext)
}

func (s *NamedActionContext) AllNEWLINE() []antlr.TerminalNode {
	return s.GetTokens(VyLangParserNEWLINE)
}

func (s *NamedActionContext) NEWLINE(i int) antlr.TerminalNode {
	return s.GetToken(VyLangParserNEWLINE, i)
}

func (s *NamedActionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NamedActionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NamedActionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.EnterNamedAction(s)
	}
}

func (s *NamedActionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.ExitNamedAction(s)
	}
}

func (p *VyLangParser) NamedAction() (localctx INamedActionContext) {
	this := p
	_ = this

	localctx = NewNamedActionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, VyLangParserRULE_namedAction)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(138)
		p.Match(VyLangParserT__2)
	}
	{
		p.SetState(139)
		p.Match(VyLangParserIDENTIFIER)
	}
	{
		p.SetState(140)
		p.Match(VyLangParserT__3)
	}
	{
		p.SetState(141)
		p.Type_()
	}
	{
		p.SetState(142)
		p.Match(VyLangParserT__4)
	}
	p.SetState(146)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == VyLangParserNEWLINE {
		{
			p.SetState(143)
			p.Match(VyLangParserNEWLINE)
		}

		p.SetState(148)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(149)
		p.Action_()
	}
	p.SetState(153)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 7, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(150)
				p.Match(VyLangParserNEWLINE)
			}

		}
		p.SetState(155)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 7, p.GetParserRuleContext())
	}

	return localctx
}
